[package]
name = "B-L4S5I-IOT01A-mvp"
version = "0.1.0"
authors = ["Kurt Strecker <ksphotopro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.stm32l4]
version = "0.13.0"
features = ["stm32l4x5", "rt"]