[package]
name = "B-L4S5I-IOT01A-mvp"
version = "0.1.0"
authors = ["Kurt Strecker <ksphotopro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
nb = "0.1.2"
cortex-m = "0.7"
cortex-m-rt = "0.6"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2"

[dependencies.stm32l4xx-hal]
version = "0.6.0"
features = ["rt", "stm32l4x5"]